# appload-rmstream

./: .gitignore  .gitmodules  README.MD  build-rm2.sh  build-rmpp.sh  manifest.json
.github/workflows/: build-release.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: devices.rs  framebuffer_spy.rs  main.rs  page.html
ui/: main.qml
