[package]
name = "stream2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
lazy_static = "1.5.0"
libc = "0.2.169"
png = "0.17.16"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.33.1"
appload-client = { path = "rmpp-appload/backends/appload-clients/rust-backend" }
async-trait = "0.1.85"
evdev = { version = "0.13.0", features = ["tokio"] }
warp = "0.3.7"
futures = "0.3.31"
flate2 = { version = "1.1.1", features = ["zlib-rs"] }
